--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port =0
-#0\uC740 \uB79C\uB364\uD3EC\uD2B8
+#0은 랜덤포트
 spring.application.name = user-service
 
 eureka.client.register-with-eureka = true
 eureka.client.fetch-registry =true
-#\uC720\uB808\uCE74 \uC11C\uBC84\uB85C\uBD80\uD130 \uC778\uC2A4\uD134\uC2A4\uB4E4\uC758 \uC815\uBCF4\uB97C \uC8FC\uAE30\uC801\uC73C\uB85C \uAC00\uC838\uC62C\uAC83\uC778\uAC00\uC758 \uC5EC\uBD80 \uAC31\uC2E0\uB41C \uC815\uBCF4\uB97C \uBC1B\uC744\uAC70\uBA74 true
+#유레카 서버로부터 인스턴스들의 정보를 주기적으로 가져올것인가의 여부 갱신된 정보를 받을거면 true
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
-#\uC720\uB808\uCE74 \uC11C\uBC84\uC5D0 \uB4F1\uB85D\uD558\uB294 api url
-eureka.instance.instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${server.port}:${spring.application.instance_id:${random.value}}
+#유레카 서버에 등록하는 api url
+eureka.instance.instance-id: ${spring.cloud.client.1hostname}:${spring.application.name}:${server.port}:${spring.application.instance_id:${random.value}}
