--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -7,4 +7,5 @@ eureka.client.fetch-registry =true
 #유레카 서버로부터 인스턴스들의 정보를 주기적으로 가져올것인가의 여부 갱신된 정보를 받을거면 true
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 #유레카 서버에 등록하는 api url
-eureka.instance.instance-id: ${spring.cloud.client.1hostname}:${spring.application.name}:${server.port}:${spring.application.instance_id:${random.value}}
+eureka.instance.instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${server.port}:${spring.application.instance_id:${random.value}}
+
