fix : Custom Filter 적용

--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -7,11 +7,12 @@ spring.application.name = apigateway-service
 spring.cloud.gateway.routes[0].id = first-service
 spring.cloud.gateway.routes[0].uri = http://localhost:8081/
 spring.cloud.gateway.routes[0].predicates[0] = Path=/first-service/**
-spring.cloud.gateway.routes[0].filters[0] = AddRequestHeader=first-request, first-requests-first
-spring.cloud.gateway.routes[0].filters[1] = AddResponseHeader=first-response, first-response-header
+spring.cloud.gateway.routes[0].filters[0] = CustomFilter
+#spring.cloud.gateway.routes[0].filters[0] = AddRequestHeader=first-request, first-requests-first
+#spring.cloud.gateway.routes[0].filters[1] = AddResponseHeader=first-response, first-response-header
 
 spring.cloud.gateway.routes[1].id = second-service
 spring.cloud.gateway.routes[1].uri = http://localhost:8082/
 spring.cloud.gateway.routes[1].predicates[0] = Path=/second-service/**
-spring.cloud.gateway.routes[1].filters[0] = AddRequestHeader=second-request, second-requests-second
-spring.cloud.gateway.routes[1].filters[1] = AddResponseHeader=second-response, second-response-header
+#spring.cloud.gateway.routes[1].filters[0] = AddRequestHeader=second-request, second-requests-second
+#spring.cloud.gateway.routes[1].filters[1] = AddResponseHeader=second-response, second-response-header
