--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -4,6 +4,10 @@ eureka.client.fetch-registry =false
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 spring.application.name = apigateway-service
 
+spring.cloud.gateway.default-filters[0].name = GlobalFilter
+spring.cloud.gateway.default-filters[0].args.baseMessage=Spring Cloud Gateway Global Filter
+spring.cloud.gateway.default-filters[0].args.preLogger=true
+spring.cloud.gateway.default-filters[0].args.postLogger=true
 spring.cloud.gateway.routes[0].id = first-service
 spring.cloud.gateway.routes[0].uri = http://localhost:8081/
 spring.cloud.gateway.routes[0].predicates[0] = Path=/first-service/**
