--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port =8000
-eureka.client.register-with-eureka = false
-eureka.client.fetch-registry =false
+eureka.client.register-with-eureka = true
+eureka.client.fetch-registry = true
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 spring.application.name = apigateway-service
 
