fix : 로드밸런스 체크

--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.cloud.gateway.default-filters[0].args.baseMessage= Global Filter output
 spring.cloud.gateway.default-filters[0].args.preLogger=true
 spring.cloud.gateway.default-filters[0].args.postLogger=true
 spring.cloud.gateway.routes[0].id = first-service
-spring.cloud.gateway.routes[0].uri = http://localhost:8081/
+#spring.cloud.gateway.routes[0].uri = http://localhost:8081/
+spring.cloud.gateway.routes[0].uri = lb://FIRST-SERVICE
 spring.cloud.gateway.routes[0].predicates[0] = Path=/first-service/**
 spring.cloud.gateway.routes[0].filters[0].name = CustomFilter
 #spring.cloud.gateway.routes[0].filters[0] = AddRequestHeader=first-request, first-requests-first
@@ -20,8 +21,10 @@ spring.cloud.gateway.routes[0].filters[1].args.preLogger=true
 spring.cloud.gateway.routes[0].filters[1].args.postLogger=true
 
 spring.cloud.gateway.routes[1].id = second-service
-spring.cloud.gateway.routes[1].uri = http://localhost:8082/
+spring.cloud.gateway.routes[1].uri = lb://SECOND-SERVICE
+#spring.cloud.gateway.routes[1].uri = http://localhost:8082/
 spring.cloud.gateway.routes[1].predicates[0] = Path=/second-service/**
 spring.cloud.gateway.routes[1].filters[0].name = CustomFilter
 #spring.cloud.gateway.routes[1].filters[0] = AddRequestHeader=second-request, second-requests-second
 #spring.cloud.gateway.routes[1].filters[1] = AddResponseHeader=second-response, second-response-header
+
