fix : 유레카 서버 포트 변경

--- a/DiscoveryService/src/main/resources/application.properties
+++ b/DiscoveryService/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.name = DiscoveryService
 eureka.client.register-with-eureka = false
 # 자기자신은 클라이언트로 등록하지 않고 서버로만 기동!
 eureka.client.fetch-registry =false
+
+eureka.client.service-url.defaultZone=http://localhost:${server.port}/eureka/
