--- a/UserService2/src/main/resources/application.yml
+++ b/UserService2/src/main/resources/application.yml
@@ -4,6 +4,14 @@ server:
 spring:
   application:
     name: user-service2
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console
+  #datasource:
+  #  url: jdbc:h2:mem:testdb
 
 eureka:
   instance:
