feat : jpa, h2 연동 및 회원가입 api

--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.cloud.gateway.routes[1].filters[0].name = CustomFilter
 #spring.cloud.gateway.routes[1].filters[0] = AddRequestHeader=second-request, second-requests-second
 #spring.cloud.gateway.routes[1].filters[1] = AddResponseHeader=second-response, second-response-header
 
+spring.cloud.gateway.routes[2].id = user-service2
+spring.cloud.gateway.routes[2].uri = lb://USER-SERVICE2
+spring.cloud.gateway.routes[2].predicates[0] = Path=/user-service2/**
