--- a/UserService2/build.gradle
+++ b/UserService2/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+
 }
 
 dependencyManagement {
