--- a/UserService2/src/main/resources/application.yml
+++ b/UserService2/src/main/resources/application.yml
@@ -10,8 +10,11 @@ spring:
       settings:
         web-allow-others: true
       path: /h2-console
-  #datasource:
-  #  url: jdbc:h2:mem:testdb
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    #username:
+    #password:
 
 eureka:
   instance:
