--- a/UserService2/build.gradle
+++ b/UserService2/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
