fix : 유저 서비스 플젝, 패스 rewrite 설정

--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -31,3 +31,4 @@ spring.cloud.gateway.routes[1].filters[0].name = CustomFilter
 spring.cloud.gateway.routes[2].id = user-service2
 spring.cloud.gateway.routes[2].uri = lb://USER-SERVICE2
 spring.cloud.gateway.routes[2].predicates[0] = Path=/user-service2/**
+spring.cloud.gateway.routes[2].filters[0]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
