--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.cloud.gateway.default-filters[0].name = GlobalFilter
 spring.cloud.gateway.default-filters[0].args.baseMessage= Global Filter output 
 spring.cloud.gateway.default-filters[0].args.preLogger=true
 spring.cloud.gateway.default-filters[0].args.postLogger=true
+
 spring.cloud.gateway.routes[0].id = first-service
 #spring.cloud.gateway.routes[0].uri = http://localhost:8081/
 spring.cloud.gateway.routes[0].uri = lb://FIRST-SERVICE
@@ -28,7 +29,28 @@ spring.cloud.gateway.routes[1].filters[0].name = CustomFilter
 #spring.cloud.gateway.routes[1].filters[0] = AddRequestHeader=second-request, second-requests-second
 #spring.cloud.gateway.routes[1].filters[1] = AddResponseHeader=second-response, second-response-header
 
+#spring.cloud.gateway.routes[2].id = user-service2
+#spring.cloud.gateway.routes[2].uri = lb://USER-SERVICE2
+#spring.cloud.gateway.routes[2].predicates[0] = Path=/user-service2/**
+#spring.cloud.gateway.routes[2].filters[0]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
+
 spring.cloud.gateway.routes[2].id = user-service2
 spring.cloud.gateway.routes[2].uri = lb://USER-SERVICE2
-spring.cloud.gateway.routes[2].predicates[0] = Path=/user-service2/**
-spring.cloud.gateway.routes[2].filters[0]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[2].predicates[0] = Path=/user-service2/login
+spring.cloud.gateway.routes[2].predicates[1] = Method=POST
+spring.cloud.gateway.routes[2].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[2].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[3].id = user-service2
+spring.cloud.gateway.routes[3].uri = lb://USER-SERVICE2
+spring.cloud.gateway.routes[3].predicates[0] = Path=/user-service2/join
+spring.cloud.gateway.routes[3].predicates[1] = Method=POST
+spring.cloud.gateway.routes[3].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[3].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[4].id = user-service2
+spring.cloud.gateway.routes[4].uri = lb://USER-SERVICE2
+spring.cloud.gateway.routes[4].predicates[0] = Path=/user-service2/**
+spring.cloud.gateway.routes[4].predicates[1] = Method=GET
+spring.cloud.gateway.routes[4].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[4].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
