--- a/UserService2/build.gradle
+++ b/UserService2/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 }
 
