--- a/UserService2/src/main/resources/application.yml
+++ b/UserService2/src/main/resources/application.yml
@@ -31,3 +31,8 @@ greeting:
 logging:
   level:
     com.example.userservice2: DEBUG
+
+#expiration_time: 60*60*24*1000 = 하루
+token:
+  expiration_time: 86400000
+  secret: dfmlejkfjdjdddf1241524ghdas
