feat : AuthorizationHeaderFilter  추가

--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -54,3 +54,7 @@ spring.cloud.gateway.routes[4].predicates[0] = Path=/user-service2/**
 spring.cloud.gateway.routes[4].predicates[1] = Method=GET
 spring.cloud.gateway.routes[4].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[4].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[4].filters[2].name=AuthorizationHeaderFilter
+
+
+token.secret = dfmlejkfjdjdddf1241524ghdas
