fix : 게이트웨이 카탈로그 서비스 설정

--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ eureka.client.register-with-eureka = true
 eureka.client.fetch-registry = true
 eureka.client.service-url.defaultZone = http://localhost:8762/eureka
 spring.application.name = apigateway-service
+token.secret = dfmlejkfjdjdddf1241524ghdas
 
 spring.cloud.gateway.default-filters[0].name = GlobalFilter
 spring.cloud.gateway.default-filters[0].args.baseMessage= Global Filter output 
@@ -57,5 +58,10 @@ spring.cloud.gateway.routes[4].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[4].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
 spring.cloud.gateway.routes[4].filters[2].name=AuthorizationHeaderFilter
 
+spring.cloud.gateway.routes[5].id = catalog-service
+spring.cloud.gateway.routes[5].uri = lb://CATALOG-SERVICE
+spring.cloud.gateway.routes[5].predicates[0] = Path=/catalog-service/**
+spring.cloud.gateway.routes[5].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[5].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
 
-token.secret = dfmlejkfjdjdddf1241524ghdas
+
