--- a/UserService2/build.gradle
+++ b/UserService2/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 }
 
 dependencyManagement {
