--- a/UserService2/src/main/resources/application.yml
+++ b/UserService2/src/main/resources/application.yml
@@ -33,6 +33,6 @@ logging:
     com.example.userservice2: DEBUG
 
 #expiration_time: 60*60*24*1000 = 하루
-token:
-  expiration_time: 86400000
-  secret: dfmlejkfjdjdddf1241524ghdas
+#token:
+  #expiration_time: 86400000
+  #secret: dfmlejkfjdjdddf1241524ghdas
