fix : api 게이트웨이 서버에 액튜에이터 반영

--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -5,6 +5,8 @@ eureka.client.service-url.defaultZone = http://localhost:8762/eureka
 spring.application.name = apigateway-service
 token.secret = dfmlejkfjdjdddf1241524ghdas
 
+management.endpoints.web.exposure.include=refresh, health, beans, httptrace
+
 spring.cloud.gateway.default-filters[0].name = GlobalFilter
 spring.cloud.gateway.default-filters[0].args.baseMessage= Global Filter output 
 spring.cloud.gateway.default-filters[0].args.preLogger=true
@@ -57,10 +59,17 @@ spring.cloud.gateway.routes[4].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[4].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
 spring.cloud.gateway.routes[4].filters[2].name=AuthorizationHeaderFilter
 
-spring.cloud.gateway.routes[5].id = catalog-service
-spring.cloud.gateway.routes[5].uri = lb://CATALOG-SERVICE
-spring.cloud.gateway.routes[5].predicates[0] = Path=/catalog-service/**
+spring.cloud.gateway.routes[5].id = user-service2
+spring.cloud.gateway.routes[5].uri = lb://USER-SERVICE2
+spring.cloud.gateway.routes[5].predicates[0] = Path=/user-service2/actuator/**
+spring.cloud.gateway.routes[5].predicates[1] = Method=GET,POST
 spring.cloud.gateway.routes[5].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[5].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[6].id = catalog-service
+spring.cloud.gateway.routes[6].uri = lb://CATALOG-SERVICE
+spring.cloud.gateway.routes[6].predicates[0] = Path=/catalog-service/**
+spring.cloud.gateway.routes[6].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[6].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
 
 
