fix : 설정 가져오는 것 외부 깃허브에서 가져오는것으로

--- a/ConfigService/src/main/resources/application.yml
+++ b/ConfigService/src/main/resources/application.yml
@@ -8,4 +8,7 @@ spring:
     config:
       server:
         git:
-          uri: file:///F:\java\GitApp\SpringCloudMsa1\ConfigRepository
+          #uri: file:///F:\java\GitApp\SpringCloudMsa1\ConfigRepository
+          uri: https://github.com/ytw9699/ConfigRepository
+#         username:
+#         password:
