feat : Order 프로젝트 생성

--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -70,6 +70,12 @@ spring.cloud.gateway.routes[6].id = catalog-service
 spring.cloud.gateway.routes[6].uri = lb://CATALOG-SERVICE
 spring.cloud.gateway.routes[6].predicates[0] = Path=/catalog-service/**
 spring.cloud.gateway.routes[6].filters[0]=RemoveRequestHeader=Cookie
-spring.cloud.gateway.routes[6].filters[1]=RewritePath=/user-service2/(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[6].filters[1]=RewritePath=/catalog-service/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[7].id = order-service
+spring.cloud.gateway.routes[7].uri = lb://ORDER-SERVICE
+spring.cloud.gateway.routes[7].predicates[0] = Path=/order-service/**
+spring.cloud.gateway.routes[7].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[7].filters[1]=RewritePath=/order-service/(?<segment>.*), /$\{segment}
 
 
