fix : 오더 서비스에서 주문 리스트 요청시 404  오류나면 로그 출력

--- a/UserService2/src/main/resources/application.yml
+++ b/UserService2/src/main/resources/application.yml
@@ -28,9 +28,12 @@ eureka:
 greeting:
   message: Welcome
 
+#logging:
+#  level:
+#    com.example.userservice2: DEBUG
 logging:
   level:
-    com.example.userservice2: DEBUG
+    com.example.userservice2.client: DEBUG
 
 management:
   endpoints:
