--- a/UserService2/src/main/resources/application.yml
+++ b/UserService2/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: user-service2
+  zipkin:
+    base-url: http://localhost:9411
+    enabled: true
+  sleuth:
+    sampler:
+      probability: 1.0
   h2:
     console:
       enabled: true
