--- a/ApiGateWay-Service/src/main/resources/application.properties
+++ b/ApiGateWay-Service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ eureka.client.service-url.defaultZone = http://localhost:8762/eureka
 spring.application.name = apigateway-service
 token.secret = dfmlejkfjdjdddf1241524ghdas
 
-management.endpoints.web.exposure.include=refresh, health, beans, httptrace
+management.endpoints.web.exposure.include=refresh, health, beans, httptrace, info, metrics, prometheus
 
 spring.cloud.gateway.default-filters[0].name = GlobalFilter
 spring.cloud.gateway.default-filters[0].args.baseMessage= Global Filter output 
