--- a/UserService2/src/main/resources/application.yml
+++ b/UserService2/src/main/resources/application.yml
@@ -45,7 +45,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans
+        include: refresh, health, beans, info, metrics, prometheus
 
 
 #expiration_time: 60*60*24*1000 = 하루
