--- a/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
+++ b/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
@@ -33,6 +33,11 @@ spring:
           predicates:
             - Path=/second-service/**
           filters:
-            - CustomFilter
             #- AddRequestHeader=second-request, second-request-header2
             #- AddResponseHeader=second-response, second-response-header2
+            - name: CustomFilter
+            - name: LoggingFilter
+              args:
+                baseMessage: Hi, there.
+                preLogger: true
+                postLogger: true
