--- a/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
+++ b/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
 
@@ -21,7 +21,7 @@ spring:
             postLogger: true
       routes:
         - id: first-service
-          uri:  http://localhost:8081/
+          uri:  lb://MY-FIRST-SERVICE
           predicates:
             - Path=/first-service/**
           filters:
@@ -29,7 +29,7 @@ spring:
             #- AddRequestHeader=first-request, first-request-header2
             #- AddResponseHeader=first-response, first-response-header2
         - id: second-service
-          uri: http://localhost:8082/
+          uri: lb://MY-SECOND-SERVICE
           predicates:
             - Path=/second-service/**
           filters:
