fix : Users Microservice - welcome() 메소드

--- a/leedowonLecture/UserService/src/main/resources/application.yml
+++ b/leedowonLecture/UserService/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
-  port: 9001
-  #port: 0  > 0번 포트
+  port: 0
 
 spring:
   application:
@@ -14,3 +13,6 @@ eureka:
     fetch-registry: true #유레카 서버로부터 인스턴스들의 정보를 주기적으로 가져올것인가의 여부 갱신된 정보를 받을거면 true
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka #유레카 서버 url
+
+greeting:
+  message: Welcome to the Simple E-commerce
