--- a/leedowonLecture/UserService/src/main/resources/application.yml
+++ b/leedowonLecture/UserService/src/main/resources/application.yml
@@ -25,3 +25,11 @@ eureka:
 
 greeting:
   message: Welcome to the Simple E-commerce
+
+logging:
+  level:
+    com.example.userservice: DEBUG
+
+token:
+  expiration_time: 86400000
+  secret: user_token
