--- a/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
+++ b/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
@@ -10,6 +10,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+token:
+  secret: user_token
+
 spring:
   application:
     name: apigateway-service
@@ -46,6 +49,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+            - AuthorizationHeaderFilter
         - id: order-service
           uri: lb://ORDER-SERVICE
           predicates:
