fix : Spring Cloud Gateway에서 Spring Cloud Config 연동2

--- a/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
+++ b/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
@@ -10,6 +10,12 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, httptrace
+
 token:
   secret: user_token
 
@@ -50,6 +56,14 @@ spring:
             - RemoveRequestHeader=Cookie
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/actuator/**
+            - Method=GET,POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
         - id: order-service
           uri: lb://ORDER-SERVICE
           predicates:
