--- a/leedowonLecture/config-service/src/main/resources/application.yml
+++ b/leedowonLecture/config-service/src/main/resources/application.yml
@@ -4,9 +4,19 @@ server:
 spring:
   application:
     name: config-service
+  #profiles:
+    #active: native
   cloud:
     config:
       server:
+        #native:
+          #search-locations: file://${user.home}/Desktop/work/native-file-repo
+          #search-locations: F:\java\GitApp\SpringCloudMsa1\leedowonLecture\spring-cloud-config2
+        #위 방법은 로컬에서 파일 정보시스템 사용하는 방법
         git:
-          uri: file:///F:\java\GitApp\SpringCloudMsa1\leedowonLecture\ConfigRepository
+          #uri: file:///F:\java\GitApp\SpringCloudMsa1\leedowonLecture\spring-cloud-config
+          #위 방법은 로컬에서 git을 가지고 하는 방법이고 아래는 remote git 을 이용
+          uri: https://github.com/ytw9699/spring-cloud-config
+#         username:
+#         password:
 
