--- a/leedowonLecture/ApiGateway-service/pom.xml
+++ b/leedowonLecture/ApiGateway-service/pom.xml
@@ -61,6 +61,10 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
