--- a/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
+++ b/leedowonLecture/ApiGateway-service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans, httptrace
+        include: refresh, health, beans, httptrace, busrefresh
 
 token:
   secret: user_token
@@ -22,6 +22,11 @@ token:
 spring:
   application:
     name: apigateway-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     gateway:
       default-filters:
