--- a/leedowonLecture/UserService/src/main/resources/bootstrap.yml
+++ b/leedowonLecture/UserService/src/main/resources/bootstrap.yml
@@ -4,6 +4,6 @@ spring:
   cloud:
     config:
       uri: http://127.0.0.1:8888
-      name: ecommerce
-  profiles:
-    active: dev
+      name: config-service
+#  profiles:
+#    active: dev
